# ConversePDF

./: .gitignore  .vercelignore  README.md  custom_types.py  main.py  notes.md  prev codes.txt  pyproject.toml  requirements.txt  streamlit_app.py  vector_db.py
api/: data_loader.py  main.py  vector_db.py
qdrant_storage/: raft_state.json
streamlit/: requirements.txt  streamlit_app.py
